maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:28: warning: This catches all Throwables. If this is really intended, use `case _ : Throwable` to clear this warning.
  catch {case _ =>}
              ^ShortestPathMaze:33: warning: This catches all Throwables. If this is really intended, use `case _ : Throwable` to clear this warning.
  } catch {case _ =>}
                ^ShortestPathMaze:38: warning: This catches all Throwables. If this is really intended, use `case _ : Throwable` to clear this warning.
  } catch {case _ =>}
                ^ShortestPathMaze:43: warning: This catches all Throwables. If this is really intended, use `case _ : Throwable` to clear this warning.
  } catch {case _ =>}
                ^ShortestPathMaze:83: error: not found: value -
      case indice-1 => marquerAutour(x,y,indice)
                 ^ShortestPathMaze:91: error: not found: value setDiresction
    setDiresction(dirMinimale(x,y))
    ^ShortestPathMaze:91: error: not found: value x
    setDiresction(dirMinimale(x,y))
                              ^ShortestPathMaze:91: error: not found: value y
    setDiresction(dirMinimale(x,y))
                                ^